Added Icon and Fixed Bugs
Fixed maximum sizing of controls box.
Added an icon.
Added META.

--- a/css/index-css.css
+++ b/css/index-css.css
@@ -43,6 +43,8 @@ body {
   display: grid;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 .ctrlButton {
