--- a/css/index-css.scss
+++ b/css/index-css.scss
@@ -52,6 +52,8 @@ body {
     padding: 15px;
     display: grid;
     grid-template-columns: 100%;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 .ctrlButton {
